tests/lime/fail/labels/label_ref_no_dot.wsa
; The dot is included in the parsed label name, so it does not resolve.
    jmp hello
.hello:
